<resources>
    <string name="app_name">CardSlider</string>
    <string name="text1">The museum is housed in the Louvre Palace, originally built as a fortress in the late 12th century…</string>
    <string name="text2">Gwanghwamun is the main and largest gate of Gyeongbokgung Palace, in Jongno-gu, Seoul, South Korea.</string>
    <string name="text3">Tower Bridge is a combined bascule and suspension bridge in London built in 1886–1894.</string>
    <string name="text4">The Temple of Heaven is an imperial complex of religious buildings situated in the southeastern part…</string>
    <string name="text5">The Aegean Islands are within the sea and some bound it on its southern periphery…</string>

    <!-- Strings related to Settings -->
    <string name="Edit_Profile">Edit Profile</string>
    <string name="Change_Password">Change Password</string>
    <string name="Payment_Info">Payment Information</string>
    <string name="Notifications">Notifications</string>
    <string name="Logout">Logout</string>
    <string name="settings">Settings</string>
    <string name="history">History</string>
    <string name="title_activity_settings">Settings</string>

    <string name="new_pass_mess">Please enter new password</string>
    <string name="confirm_dialog_title">Change Password</string>
    <string name="confirm">SAVE</string>
    <string name="cancel">CANCEL</string>

    <string name="image">image</string>
    <string name="email_id">email id</string>
    <string name="password">password</string>
    <string name="login">Login</string>
    <string name="password" >Password</string>
    <string name="email_id">Email</string>
    <string name="image" />
    <string name="failed" />
    <string name="action_settings">Settings</string>
    <string name="log_out">Log out</string>
    <string name="failed">Authentication Failed</string>
    <string name="name">Name</string>
    <string name="email">Email</string>

    <string name="edit">EDIT</string>
    <string name="save">SAVE</string>
    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
</resources>

